# ESP32_S3_epaper

./: CMakeLists.txt  README.md  README_Fun.md  README_Result_Code.md  mintty.exe.stackdump  run_esp32s3_web_flasher.bat  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  app_nvs.c  file_server.c  file_serving_example_common.h  github_key  github_key.pub  idf_component.yml  main.c  mount.c  tdx_cfg.h  tdx_shared_spi.c  tdx_shared_spi.h
main/ble/: ble_data_handler.cpp  ble_data_handler.h  tdx_cfg.h  user_app.cpp  user_app.h
main/cast_core/: cast_core.c  cast_core.h
main/ch583_uart/: ch583_uart_app.c  ch583_uart_app.h  ch583_wifi_uart_protocol.c  ch583_wifi_uart_protocol.h
main/debug_output/: debug_output.c  debug_output.h
main/epd_display/: display_bsp.cpp  display_bsp.h  epd_display_app.cpp  epd_display_app.h  epd_test_1360_480_1085_3color_const.cpp  epd_test_1360_480_1085_3color_const.h  epd_type.cpp  epd_type.h  epd_type_1024_600.cpp  epd_type_1024_600.h  epd_type_1360_480_1085.cpp  epd_type_1360_480_1085.h  epd_type_1360_480_1085_3color.cpp  epd_type_1360_480_1085_3color.h  epd_type_1600_1200_133.cpp  epd_type_1600_1200_133.h  epd_type_1600_1200_133_DKE.cpp  epd_type_1600_1200_133_DKE.h  epd_type_1600_1200_79.cpp  epd_type_1600_1200_79.h  epd_type_1600_1200_common.cpp  epd_type_1600_1200_common.h  epd_type_4color_common.cpp  epd_type_4color_common.h  epd_type_800_480.cpp  epd_type_800_480.h  epd_type_800_480_4s_75.cpp  epd_type_800_480_4s_75.h  epd_type_800_480_4s_75_DKE.cpp  epd_type_800_480_4s_75_DKE.h  epd_type_800_480_4s_75_mofang.cpp  (+1 more)
(+88 files in other folders)
