idf_component_register(SRCS "main.c" "file_server.c" "mount.c" "ble/user_app.cpp" "server_network_sta/server_network_sta.c" "server_network_sta/net_data/server_network_sta_data.c" "server_network_sta/ota/network_ota_upload.c" "server_network_sta/upload/server_network_sta_upload.c" "server_network_sta/cast/server_network_sta_cast.c" "server_network_sta/saved_images/server_network_sta_saved_images.c" "server_network_sta/slideshow/server_network_sta_slideshow.c" "server_network_sta/slideshow_control/server_network_sta_slideshow_control.c" "server_network_sta/delete/server_network_sta_delete.c" "server_network_sta/wifi_work_time/server_network_sta_wifi_work_time.c" "server_network_sta/ping/server_network_sta_ping.c" "ch583_uart/ch583_uart_app.c" "ch583_uart/ch583_wifi_uart_protocol.c" "epd_display/display_bsp.cpp" "epd_display/epd_display_app.cpp" "led_status/led_status.c"
                    INCLUDE_DIRS "." "ble" "server_network_sta" "server_network_sta/net_data" "server_network_sta/ota" "server_network_sta/upload" "server_network_sta/cast" "server_network_sta/saved_images" "server_network_sta/slideshow" "server_network_sta/slideshow_control" "server_network_sta/delete" "server_network_sta/wifi_work_time" "server_network_sta/ping" "ch583_uart" "epd_display" "led_status"
                    PRIV_REQUIRES fatfs esp_event vfs esp_netif nvs_flash spiffs esp_http_server bt esp_wifi mdns app_update esp_driver_uart esp_driver_gpio esp_driver_spi esp_timer
                    EMBED_FILES "favicon.ico" "upload_script.html")
